[project]
name = "tools"
version = "0.1.0"
description = "tools for neural data analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmap>=0.7.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pip>=26.1.1",
    "probeinterface>=0.3.2",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "spikeinterface>=0.104.0",
]
